@@ -720,6 +720,11 @@ memory and require at least 2MB stack to avoid stack overflows.
 \item \tet{gen} returns the generators of $E(\Q)$, if known (from John
   Cremona's database)
 
+\subsubsec{Curves over number fields}
+
+\item \tet{nf} returns the number field over which $E$ is defined.
+
+
 %SECTION: elliptic_curves
 
 \section{Functions related to general number fields}
