@@ -1,0 +1,12 @@
+1
+[Mod(5/2*t^2 - 3/8*t + 7/4, t^3 - 2), Mod(3/8*t^2 - 67/16*t - 123/16, t^3 - 
+2)]
+[Mod(21112/25281*t^2 + 33953/25281*t + 54736/25281, t^3 - 2), Mod(2829824/13
+39893*t^2 + 5014079/1339893*t + 5473088/1339893, t^3 - 2)]
+[Mod(-t, t^3 - 2), Mod(t, t^3 - 2)]
+[]
+3*x^4 + Mod(6*t + 6, t^3 - 2)*x^2 + Mod(-12*t - 24, t^3 - 2)*x + Mod(-t^2 - 
+2*t - 1, t^3 - 2)
+[0, 0, 0, Mod(-3*t^2 + 5184*t, t^3 - 2), Mod(-6912*t^2 + 5971968*t + 4, t^3 
+- 2)]
+Total time spent: 156
